Add organization schema to team page

--- a/team.html
+++ b/team.html
@@ -233,47 +233,47 @@
 			
 			<h5>We are collaborating with six universities, including faculty from <a href="http://med.stanford.edu/" target="_blank" class="green-highlight">Stanford Medicine</a>. Our team includes more than a dozen passionate young AI student engineers from Pakistan's most prestigious institutions.</h5>
 				<div class="flex flex-3">
-					<article>
+					<article itemscope itemtype="https://schema.org/">
 						<div class="image collab">
 							<a href="https://responselab.stanford.edu/" target="_blank">
-								<img src="images/stanford-covid-logo.png" alt="Stanford COVID Response Lab" />
+								<img itemprop="logo" src="images/stanford-covid-logo.png" alt="Stanford COVID Response Lab" />
 							</a>
 						</div>
 					</article>
-					<article>
+					<article itemscope itemtype="https://schema.org/EducationalOrganization">
 						<div class="image collab">
 							<a href="https://www.duhs.edu.pk/" target="_blank">
-								<img src="images/duhs.png" alt="DUHS">
+								<img itemprop="logo" src="images/duhs.png" alt="DUHS">
 							</a>
 						</div>
 					</article>
-					<article>
+					<article itemscope itemtype="https://schema.org/EducationalOrganization">
 						<div class="image collab">
 							<a href="https://www.neduet.edu.pk/" target="_blank">
-								<img src="images/NEDUET.png" alt="NEDUET" />
+								<img itemprop="logo" src="images/NEDUET.png" alt="NEDUET" />
 							</a>
 						</div>
 					</article>
-					<article>
+					<article itemscope itemtype="https://schema.org/EducationalOrganization">
 						<div class="image collab">
 							<a href="https://ssuet.edu.pk/" target="_blank">
-								<img src="images/SSUET.jpg" alt="SSUET" />
+								<img itemprop="logo" src="images/SSUET.jpg" alt="SSUET" />
 							</a>
 						</div>
 					</article>
-					<article>
+					<article itemscope itemtype="https://schema.org/EducationalOrganization">
 						<div class="image collab">
 							<a href = "http://habib.edu.pk/" target="_blank">
-								<img src="images/habib-logo.jpg" alt = "Habib University" />
+								<img itemprop="logo" src="images/habib-logo.jpg" alt="Habib University" />
 							</a>
 						</div>
 					</article>
-					<article>
+					<article itemscope itemtype="https://schema.org/EducationalOrganization">
 						<div class="image collab">
 							<a href = "https://www.uol.edu.pk/" target="_blank">
-								<img 
+								<img itemprop="logo" 
 									id="u-lahore-logo" src="images/u-lahore-logo.png" 
-									alt = "The University of Lahore"
+									alt="The University of Lahore"
 								/>
 							</a>
 						</div>
@@ -287,24 +287,24 @@
 			Industry Collaboration
 		</h3>
 			<div class="flex flex-4">
-				<article>
+				<article itemscope itemtype="https://schema.org/Organization">
 					<div class="image collab">
-						<a href="http://dicefoundation.org/" target="_blank">
-							<img src="images/dice.jpg" alt="DICE Foundation" />
+						<a itemprop="url" href="http://dicefoundation.org/" target="_blank">
+							<img itemprop="logo" src="images/dice.jpg" alt="DICE Foundation" />
 						</a>
 					</div>
 				</article>
-				<article>
+				<article itemscope itemtype="https://schema.org/Organization">
 					<div class="image collab">
-						<a href="https://www.alpas.com.np/" target="_blank">
-							<img src="images/alpas-logo.png" alt="Alpas logo" />
+						<a itemprop="url" href="https://www.alpas.com.np/" target="_blank">
+							<img itemprop="logo" src="images/alpas-logo.png" alt="Alpas logo" />
 						</a>
 					</div>
 				</article>
-				<article>
+				<article itemscope itemtype="https://schema.org/Organization">
 					<div class="image collab">
-						<a href="https://jig.jp/" target="_blank">
-							<img src="images/jig-logo.png" alt="Jig.jp logo" />
+						<a itemprop="url" href="https://jig.jp/" target="_blank">
+							<img itemprop="logo" src="images/jig-logo.png" alt="Jig.jp logo" />
 						</a>
 					</div>
 				</article>
