Fix Stanford Response Lab schema content

--- a/team.html
+++ b/team.html
@@ -233,44 +233,44 @@
 			
 			<h5>We are collaborating with six universities, including faculty from <a href="http://med.stanford.edu/" target="_blank" class="green-highlight">Stanford Medicine</a>. Our team includes more than a dozen passionate young AI student engineers from Pakistan's most prestigious institutions.</h5>
 				<div class="flex flex-3">
-					<article itemscope itemtype="https://schema.org/">
+					<article itemscope itemtype="https://schema.org/Organization">
 						<div class="image collab">
-							<a href="https://responselab.stanford.edu/" target="_blank">
+							<a itemprop="url" href="https://responselab.stanford.edu/" target="_blank">
 								<img itemprop="logo" src="images/stanford-covid-logo.png" alt="Stanford COVID Response Lab" />
 							</a>
 						</div>
 					</article>
 					<article itemscope itemtype="https://schema.org/EducationalOrganization">
 						<div class="image collab">
-							<a href="https://www.duhs.edu.pk/" target="_blank">
+							<a itemprop="url" href="https://www.duhs.edu.pk/" target="_blank">
 								<img itemprop="logo" src="images/duhs.png" alt="DUHS">
 							</a>
 						</div>
 					</article>
 					<article itemscope itemtype="https://schema.org/EducationalOrganization">
 						<div class="image collab">
-							<a href="https://www.neduet.edu.pk/" target="_blank">
+							<a itemprop="url" href="https://www.neduet.edu.pk/" target="_blank">
 								<img itemprop="logo" src="images/NEDUET.png" alt="NEDUET" />
 							</a>
 						</div>
 					</article>
 					<article itemscope itemtype="https://schema.org/EducationalOrganization">
 						<div class="image collab">
-							<a href="https://ssuet.edu.pk/" target="_blank">
+							<a itemprop="url" href="https://ssuet.edu.pk/" target="_blank">
 								<img itemprop="logo" src="images/SSUET.jpg" alt="SSUET" />
 							</a>
 						</div>
 					</article>
 					<article itemscope itemtype="https://schema.org/EducationalOrganization">
 						<div class="image collab">
-							<a href = "http://habib.edu.pk/" target="_blank">
+							<a itemprop="url" href = "http://habib.edu.pk/" target="_blank">
 								<img itemprop="logo" src="images/habib-logo.jpg" alt="Habib University" />
 							</a>
 						</div>
 					</article>
 					<article itemscope itemtype="https://schema.org/EducationalOrganization">
 						<div class="image collab">
-							<a href = "https://www.uol.edu.pk/" target="_blank">
+							<a itemprop="url" href = "https://www.uol.edu.pk/" target="_blank">
 								<img itemprop="logo" 
 									id="u-lahore-logo" src="images/u-lahore-logo.png" 
 									alt="The University of Lahore"
