--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
-<html>
+<html itemscope="itemscope" itemtype="https://schema.org/WebPage">
 
 <head>
 	<title>Verify your COVID-19 risk with a smartphone | Home | Virufy</title>
