--- a/join.html
+++ b/join.html
@@ -4,7 +4,7 @@
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
-<html>
+<html itemscope="itemscope" itemtype="https://schema.org/WebPage">
 
 <head>
 	<title>Get involved and become a part of Virufy team | Join Us | Virufy</title>
