--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 				<a href="https://www.facebook.com/Virufy/" target="_blank">
 					<i class="icon fab fa-facebook-f fa-2x"></i>
 				</a>&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="mailto:info@virufy.org">
+				<a class="hidden-mail" data-username="info" data-inline="false">
 					<i class="fas fa-envelope fa-2x"></i>
 				</a>
 			</div>
@@ -240,5 +240,6 @@
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
 	<script defer src="https://www.gofundme.com/static/js/embed.js"></script>
+	<script src="assets/js/email.js"></script>
 </body>
 </html>
