--- a/goals.html
+++ b/goals.html
@@ -86,7 +86,7 @@
 				<a href="https://www.facebook.com/Virufy/" target="_blank">
 					<i class="icon fab fa-facebook-f fa-2x"></i>
 				</a>&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="mailto:info@virufy.org">
+				<a class="hidden-mail" data-username="info" data-inline="false">
 					<i class="fas fa-envelope fa-2x"></i>
 				</a>
 			</div>
@@ -103,6 +103,7 @@
     <script src="assets/js/skel.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/email.js"></script>
 </body>
 
 </html>
