--- a/data.html
+++ b/data.html
@@ -110,16 +110,19 @@
 			<div class="footer-icons" id="contact">
 				<a href="https://github.com/virufy" target="_blank">
 					<i class="icon fa-github fa-2x"></i>
-				</a>&nbsp;&nbsp;&nbsp;&nbsp;
+				</a>&nbsp;&nbsp;
 				<a href="https://www.linkedin.com/company/virufy/" target="_blank">
 					<i class="icon fab fa-linkedin-in fa-2x"></i>
-				</a>&nbsp;&nbsp;&nbsp;&nbsp;
+				</a>&nbsp;&nbsp;
 				<a href="https://twitter.com/VirufyOrg" target="_blank">
 					<i class="icon fa-twitter fa-2x"></i>
-				</a>&nbsp;&nbsp;&nbsp;&nbsp;
+				</a>&nbsp;&nbsp;
 				<a href="https://www.facebook.com/Virufy/" target="_blank">
 					<i class="icon fab fa-facebook-f fa-2x"></i>
-				</a>&nbsp;&nbsp;&nbsp;&nbsp;
+				</a>&nbsp;&nbsp;
+				<a href="https://www.instagram.com/virufyorg/" target="_blank">
+					<i class="icon fab fa-instagram fa-2x"></i>
+				</a>&nbsp;&nbsp; 
 				<a class="hidden-mail" data-username="info" data-inline="false">
 					<i class="fas fa-envelope fa-2x"></i>
 				</a>
