Add Instagram icon to connect card

--- a/index.html
+++ b/index.html
@@ -170,23 +170,22 @@
 				<!-- Social Icons -->
 				<div class="col">
 					<h3>Connect</h3>
-					<div class="footer-icons">
-						
-						<!-- Facebook -->
+					<div class="footer-icons 12u">
 						<a href="https://www.facebook.com/Virufy/" target="_blank">
 							<i id="fb-icon" class="icon fab fa-facebook-f connect-icon"></i>
 						</a>
+						<a href="https://twitter.com/VirufyOrg" target="_blank">
+							<i id="twitter-icon" class="icon fa-twitter  connect-icon"></i>
+						</a>
+					</div>
 
-						<!-- LinkedIn -->
+					<div class="footer-icons 12u">
 						<a href="https://www.linkedin.com/company/virufy/" target="_blank">
 							<i id="linkedin-icon" class="icon fab fa-linkedin-in connect-icon"></i>
 						</a>
-						
-						<!-- Twitter -->
-						<a href="https://twitter.com/VirufyOrg" target="_blank">
-							<i id="twitter-icon" class="icon fa-twitter connect-icon"></i>
+						<a href="https://instagram.com/VirufyOrg" target="_blank">
+							<i id="insta-icon" class="icon fa-instagram connect-icon"></i>
 						</a>
-
 					</div>
 				</div>
 
