--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 				
 				<!-- Begin Donate Card -->
 				<div id="gfm-widget-donate" class="col">
-					<!-- <h3>Donate</h3> -->
+					<h3>Donate</h3>
 					<div class="gfm-embed" 
 						data-url="https://www.gofundme.com/f/virufyorg/widget/medium">
 					</div>
