Edit Share buttons (#7)
* Edit Share buttons

* added target

Co-authored-by: Soha Siddiqui<sohas@sonasoft.com>

--- a/index.html
+++ b/index.html
@@ -169,18 +169,18 @@
 
 				<!-- Social Icons -->
 				<div class="col">
-					<h3>Connect</h3>
+					<h3>Share</h3>						
 					<div class="footer-icons 12u">
-						<a href="https://www.facebook.com/Virufy/" target="_blank">
+						<a href="https://www.facebook.com/sharer/sharer.php?u=https://virufy.org/" target="_blank">
 							<i id="fb-icon" class="icon fab fa-facebook-f connect-icon"></i>
 						</a>
-						<a href="https://twitter.com/VirufyOrg" target="_blank">
+						<a href="http://twitter.com/share?text=[TITLE]&url=https://virufy.org/"  target="_blank">
 							<i id="twitter-icon" class="icon fa-twitter  connect-icon"></i>
 						</a>
 					</div>
 
 					<div class="footer-icons 12u">
-						<a href="https://www.linkedin.com/company/virufy/" target="_blank">
+						<a href="http://www.linkedin.com/shareArticle?mini=true&url=https://virufy.org/"  target="_blank">
 							<i id="linkedin-icon" class="icon fab fa-linkedin-in connect-icon"></i>
 						</a>
 						<a href="https://instagram.com/VirufyOrg" target="_blank">
