--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="inner">
 			<header>
 				<h1>Welcome to <span id="header-virufy-span">VIRUFY</span></h1>
-				<h3>Verify your COVID-19 risk with a smartphone!</h3>
+				<h3>A nonprofit in rescue of humanity.</h3><br><br>
 			</header>
 
 			<div class="flex">
@@ -81,6 +81,10 @@
 					<p>with AI</p>
 				</div>
 			</div>
+			
+			<header>
+				<h3>Early detection of COVID-19 with your smartphone.</h3>
+			</header>
 		</div>
 	</section>
 
