Removed spacing between heading

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 	<section id="banner">
 		<div class="inner">
 			<header>
-				<h1>Welcome to <span id="header-virufy-span">VIRUFY</span></h1>
-				<h3>A nonprofit in rescue of humanity.</h3><br><br>
+				<h1 style="margin:0;padding:0">Welcome to <span id="header-virufy-span">VIRUFY</span></h1>
+				<h3 >A nonprofit in rescue of humanity.</h3><br><br>
 			</header>
 
 			<div class="flex">
@@ -81,10 +81,6 @@
 					<p>with AI</p>
 				</div>
 			</div>
-			
-			<header>
-				<h3>Early detection of COVID-19 with your smartphone.</h3>
-			</header>
 		</div>
 	</section>
 
