--- a/app.html
+++ b/app.html
@@ -51,6 +51,7 @@
 				<a href="./team.html">Team</a>
 				<a href="./goals.html">Goals</a>
 				<a href="./join.html">Join Us</a>
+				<a href="https://blog.virufy.org/">Blog</a>
 				<a href="https://www.gofundme.com/f/virufy" target="_blank"><button>Donate</button>
 				</a>
 			</nav>
