--- a/data.html
+++ b/data.html
@@ -46,6 +46,7 @@
 				<a href="./team.html">Team</a>
 				<a href="./goals.html">Goals</a>
 				<a href="./join.html">Join Us</a>
+				<a href="https://blog.virufy.org/">Blog</a>
 				<a href="https://www.gofundme.com/f/virufyorg" target="_blank"><button>Donate</button>
 				</a>
 			</nav>
